Finished translation of dpkg-architecture manual page.

--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-07-21 16:13+0300\n"
-"PO-Revision-Date: 2007-07-30 06:33+0100\n"
+"PO-Revision-Date: 2007-07-30 10:31+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -3590,7 +3590,7 @@ msgstr ""
 #: ../../man/dpkg-architecture.1:95
 #, no-wrap
 msgid "\\s-1GNU\\s0 system type"
-msgstr ""
+msgstr "\\s-1GNU\\s0-systemtyp"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:99
@@ -3599,6 +3599,9 @@ msgid ""
 "dash: cpu and system. Examples: i386-linux-gnu, sparc-linux-gnu, i386-gnu, "
 "x86_64-netbsd."
 msgstr ""
+"En arkitekturspecificeringssträng består av två delar, avdelade med "
+"bindestreck: processor och system. Exempel: i386-linux-gnu, "
+"sparc-linux-gnu, i386-gnu, x86_64-netbsd."
 
 # type: SH
 #: ../../man/dpkg-architecture.1:100
@@ -3609,145 +3612,145 @@ msgstr "VARIABLER"
 # type: Plain text
 #: ../../man/dpkg-architecture.1:102
 msgid "The following variables are set by B<dpkg-architecture>:"
-msgstr ""
+msgstr "Följande variabler sätts av B<dpkg-architecture>:"
 
 # type: IP
 #: ../../man/dpkg-architecture.1:102
 #, no-wrap
 msgid "\\s-1DEB_BUILD_ARCH\\s0"
-msgstr ""
+msgstr "\\s-1DEB_BUILD_ARCH\\s0"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:104
 msgid "The Debian architecture of the build machine."
-msgstr ""
+msgstr "Debianarkitekturen för byggmaskinen."
 
 # type: IP
 #: ../../man/dpkg-architecture.1:104
 #, no-wrap
 msgid "\\s-1DEB_BUILD_ARCH_OS\\s0"
-msgstr ""
+msgstr "\\s-1DEB_BUILD_ARCH_OS\\s0"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:106
 msgid "The Debian system name of the build machine."
-msgstr ""
+msgstr "Debiansystemnamnet för byggmaskinen."
 
 # type: IP
 #: ../../man/dpkg-architecture.1:106
 #, no-wrap
 msgid "\\s-1DEB_BUILD_ARCH_CPU\\s0"
-msgstr ""
+msgstr "\\s-1DEB_BUILD_ARCH_CPU\\s0"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:108
 msgid "The Debian cpu name of the build machine."
-msgstr ""
+msgstr "Debian-processornamnet för byggmaskinen."
 
 # type: IP
 #: ../../man/dpkg-architecture.1:108
 #, no-wrap
 msgid "\\s-1DEB_BUILD_GNU_TYPE\\s0"
-msgstr ""
+msgstr "\\s-1DEB_BUILD_GNU_TYPE\\s0"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:110
 msgid "The \\s-1GNU\\s0 system type of the build machine."
-msgstr ""
+msgstr "\\s-1GNU\s0-systemtypen för byggmaskinen."
 
 # type: IP
 #: ../../man/dpkg-architecture.1:110
 #, no-wrap
 msgid "\\s-1DEB_BUILD_GNU_CPU\\s0"
-msgstr ""
+msgstr "\\s-1DEB_BUILD_GNU_CPU\\s0"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:112
 msgid "The \\s-1CPU\\s0 part of \\s-1DEB_BUILD_GNU_TYPE\\s0"
-msgstr ""
+msgstr "\\s-1CPU\\s0-delen av \\s-1DEB_BUILD_GNU_TYPE\\s0"
 
 # type: IP
 #: ../../man/dpkg-architecture.1:112
 #, no-wrap
 msgid "\\s-1DEB_BUILD_GNU_SYSTEM\\s0"
-msgstr ""
+msgstr "\\s-1DEB_BUILD_GNU_SYSTEM\\s0"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:114
 msgid "The System part of \\s-1DEB_BUILD_GNU_TYPE\\s0."
-msgstr ""
+msgstr "Systemdelen av \\s-1DEB_BUILD_GNU_TYPE\\s0."
 
 # type: IP
 #: ../../man/dpkg-architecture.1:114
 #, no-wrap
 msgid "\\s-1DEB_HOST_ARCH\\s0"
-msgstr ""
+msgstr "\\s-1DEB_HOST_ARCH\\s0"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:116
 msgid "The Debian architecture of the host machine."
-msgstr ""
+msgstr "Debianarkitekturen för värdmaskinen."
 
 # type: IP
 #: ../../man/dpkg-architecture.1:116
 #, no-wrap
 msgid "\\s-1DEB_HOST_ARCH_OS\\s0"
-msgstr ""
+msgstr "\\s-1DEB_HOST_ARCH_OS\\s0"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:118
 msgid "The Debian system name of the host machine."
-msgstr ""
+msgstr "Debiansystemnamnet för värdmaskinen."
 
 # type: IP
 #: ../../man/dpkg-architecture.1:118
 #, no-wrap
 msgid "\\s-1DEB_HOST_ARCH_CPU\\s0"
-msgstr ""
+msgstr "\\s-1DEB_HOST_ARCH_CPU\\s0"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:120
 msgid "The Debian cpu name of the host machine."
-msgstr ""
+msgstr "Debian-processornamnet för värdmaskinen."
 
 # type: IP
 #: ../../man/dpkg-architecture.1:120
 #, no-wrap
 msgid "\\s-1DEB_HOST_GNU_TYPE\\s0"
-msgstr ""
+msgstr "\\s-1DEB_HOST_GNU_TYPE\\s0"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:122
 msgid "The \\s-1GNU\\s0 system type of the host machine."
-msgstr ""
+msgstr "\\s-1GNU\\s0-systemtypen för värdmaskinen."
 
 # type: IP
 #: ../../man/dpkg-architecture.1:122
 #, no-wrap
 msgid "\\s-1DEB_HOST_GNU_CPU\\s0"
-msgstr ""
+msgstr "\\s-1DEB_HOST_GNU_CPU\\s0"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:124
 msgid "The \\s-1CPU\\s0 part of \\s-1DEB_HOST_GNU_TYPE\\s0."
-msgstr ""
+msgstr "\\s-1CPU\\s0-delen av \\s-1DEB_HOST_GNU_TYPE\\s0."
 
 # type: IP
 #: ../../man/dpkg-architecture.1:124
 #, no-wrap
 msgid "\\s-1DEB_HOST_GNU_SYSTEM\\s0"
-msgstr ""
+msgstr "\\s-1DEB_HOST_GNU_SYSTEM\\s0"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:126
 msgid "The System part of \\s-1DEB_HOST_GNU_TYPE\\s0."
-msgstr ""
+msgstr "Systemdelen av \\s-1DEB_HOST_GNU_TYPE\\s0."
 
 # type: SH
 #: ../../man/dpkg-architecture.1:127
 #, no-wrap
 msgid "DEBIAN/RULES"
-msgstr ""
+msgstr "DEBIAN/RULES"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:135
@@ -3759,11 +3762,17 @@ msgid ""
 "Here are some examples, which also show how you can improve the cross "
 "compilation support in your package:"
 msgstr ""
+"Miljövariablerna som sätts av B<dpkg-architecture> sänds till I<debian/rules> "
+"som make-variabler (se dokumentationen för make). Du bör dock inte "
+"bero på dem eftersom detta förhindrar manuella anrop till skriptet. Du bör "
+"istället alltid initiera dem med B<dpkg-architecture> med -q-flaggan. "
+"Här är några exempel, vilka även visar hur du kan förbättra stödet för "
+"korskompilering i ditt paket:"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:138 ../../man/dpkg-architecture.1:155
 msgid "Instead of:"
-msgstr ""
+msgstr "Istället för:"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:142
@@ -3772,11 +3781,13 @@ msgid ""
 "ARCH=\\`dpkg --print-architecture\\`\n"
 "configure $(\\s-1ARCH\\s0)-linux\n"
 msgstr ""
+"ARCH=\\`dpkg --print-architecture\\`\n"
+"configure $(\\s-1ARCH\\s0)-linux\n"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:145
 msgid "please use the following:"
-msgstr ""
+msgstr "använder du följande:"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:149
@@ -3785,12 +3796,14 @@ msgid ""
 "\\&\\s-1DEB_BUILD_GNU_TYPE\\s0 := $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)\n"
 "\\&\\s-1DEB_HOST_GNU_TYPE\\s0 := $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)\n"
 msgstr ""
+"\\&\\s-1DEB_BUILD_GNU_TYPE\\s0 := $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)\n"
+"\\&\\s-1DEB_HOST_GNU_TYPE\\s0 := $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)\n"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:151
 #, no-wrap
 msgid "configure --build=$(\\s-1DEB_BUILD_GNU_TYPE\\s0) --host=$(\\s-1DEB_HOST_GNU_TYPE\\s0)\n"
-msgstr ""
+msgstr "configure --build=$(\\s-1DEB_BUILD_GNU_TYPE\\s0) --host=$(\\s-1DEB_HOST_GNU_TYPE\\s0)\n"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:161
@@ -3801,17 +3814,21 @@ msgid ""
 "  ...\n"
 "endif\n"
 msgstr ""
+"ARCH=\\`dpkg --print-architecture\\`\n"
+"ifeq ($(\\s-1ARCH\\s0),alpha)\n"
+"  ...\n"
+"endif\n"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:164
 msgid "please use:"
-msgstr ""
+msgstr "använder du:"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:167
 #, no-wrap
 msgid "\\&\\s-1DEB_HOST_ARCH\\s0 := $(shell dpkg-architecture -qDEB_HOST_ARCH)\n"
-msgstr ""
+msgstr "\\&\\s-1DEB_HOST_ARCH\\s0 := $(shell dpkg-architecture -qDEB_HOST_ARCH)\n"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:171
@@ -3821,6 +3838,9 @@ msgid ""
 "  ...\n"
 "endif\n"
 msgstr ""
+"ifeq ($(\\s-1DEB_HOST_ARCH\\s0),alpha)\n"
+"  ...\n"
+"endif\n"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:175
@@ -3828,6 +3848,8 @@ msgid ""
 "or if you only need to check the CPU or OS type, use the DEB_HOST_ARCH_CPU "
 "or DEB_HOST_ARCH_OS variables."
 msgstr ""
+"eller, om du bara vill testa på processor- eller OS-typ, använd variablerna "
+"DEB_HOST_ARCH_CPU eller DEB_HOST_ARCH_OS."
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:180
@@ -3837,12 +3859,16 @@ msgid ""
 "below).  Especially the --print-architecture option is unreliable since we "
 "have Debian architectures which don't equal a processor name."
 msgstr ""
+"Generellt rekommenderas det inte att anropa dpkg i rules-filen för att hämta "
+"information om arkitekturen (såvida du inte vill tillhandahålla bakåtkompatibilitet, "
+"se nedan). Speciellt går det inte att lita på flaggan --print-architecture eftersom "
+"vi har Debianarkitekturer som inte är identiskt med namnet på processorn."
 
 # type: SH
 #: ../../man/dpkg-architecture.1:181
 #, no-wrap
 msgid "BACKWARD COMPATIBILITY"
-msgstr ""
+msgstr "BAKÅTKOMPATIBILITET"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:187
@@ -3853,6 +3879,10 @@ msgid ""
 "DEB_HOST_GNU_CPU or DEB_HOST_GNU_TYPE variables which have been subject to "
 "change."
 msgstr ""
+"Variablerna DEB_HOST_ARCH_CPU och DEB_HOST_ARCH_OS introduceras bara "
+"relativt nyligen i B<dpkg-architecture> (sedan dpkg 1.13.2), tidigare såg "
+"I<debian/rules>-filer oftast på innehållet i variablerna DEB_HOST_GNU_CPU och "
+"DEB_HOST_GNU_TYPE, vilka har kunnat ändra på sig."
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:192
@@ -3862,6 +3892,10 @@ msgid ""
 "may wish to retain backwards compatibility with older version of dpkg-dev by "
 "using the following code:"
 msgstr ""
+"Om I<debian/rules> ser på dessa variabler för att välja hur eller vad som "
+"skall kompileras bör detta uppdateras till att använda de nya variablerna "
+"och värdena. Om du vill bibehålla bakåtkompatibilitet med tidigare "
+"versioner av dpkg-dev kan du använda följande kod:"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:196
@@ -3870,6 +3904,8 @@ msgid ""
 "DEB_HOST_ARCH_CPU := $(shell dpkg-architecture -qDEB_HOST_ARCH_CPU 2E<gt>/dev/null)\n"
 "DEB_HOST_ARCH_OS := $(shell dpkg-architecture -qDEB_HOST_ARCH_OS 2E<gt>/dev/null)\n"
 msgstr ""
+"DEB_HOST_ARCH_CPU := $(shell dpkg-architecture -qDEB_HOST_ARCH_CPU 2E<gt>/dev/null)\n"
+"DEB_HOST_ARCH_OS := $(shell dpkg-architecture -qDEB_HOST_ARCH_OS 2E<gt>/dev/null)\n"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:210
@@ -3889,11 +3925,24 @@ msgid ""
 "  endif\n"
 "endif\n"
 msgstr ""
+"# Ta gammalt utdataformat från dpkg-architecture i beaktning.\n"
+"ifeq ($(DEB_HOST_ARCH_CPU),)\n"
+"  DEB_HOST_ARCH_CPU := $(shell dpkg-architecture -qDEB_HOST_GNU_CPU)\n"
+"  ifeq ($(DEB_HOST_ARCH_CPU),x86_64)\n"
+"    DEB_HOST_ARCH_CPU := amd64\n"
+"  endif\n"
+"endif\n"
+"ifeq ($(DEB_HOST_ARCH_OS),)\n"
+"  DEB_HOST_ARCH_OS := $(subst -gnu,,$(shell dpkg-architecture -qDEB_HOST_GNU_SYSTEM))\n"
+"  ifeq ($(DEB_HOST_ARCH_OS),gnu)\n"
+"    DEB_HOST_ARCH_OS := hurd\n"
+"  endif\n"
+"endif\n"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:213
 msgid "And similarly for DEB_BUILD_ARCH_CPU and DEB_BUILD_ARCH_OS."
-msgstr ""
+msgstr "Och på motsvarande sätt för DEB_BUILD_ARCH_CPU och DEB_BUILD_ARCH_OS."
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:216
@@ -3901,6 +3950,8 @@ msgid ""
 "If you still wish to support versions of dpkg-dev that did not include "
 "B<dpkg-architecture>, the following does the job:"
 msgstr ""
+"Om du fortfarande vill stöda versioner av dpkg-dev som inte "
+"innehöll B<dpkg-architecture> fungerar följande:"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:226
@@ -3915,6 +3966,14 @@ msgid ""
 "endif\n"
 "DEB_BUILD_GNU_TYPE=$(\\s-1DEB_BUILD_GNU_CPU\\s0)-$(\\s-1DEB_BUILD_GNU_SYSTEM\\s0)\n"
 msgstr ""
+"\\&\\s-1DEB_BUILD_ARCH\\s0 := $(shell dpkg --print-architecture)\n"
+"\\&\\s-1DEB_BUILD_GNU_CPU\\s0 := $(patsubst hurd-%,%,$(\\s-1DEB_BUILD_ARCH\\s0))\n"
+"ifeq ($(filter-out hurd-%,$(\\s-1DEB_BUILD_ARCH\\s0)),)\n"
+"  \\s-1DEB_BUILD_GNU_SYSTEM\\s0 := gnu\n"
+"else\n"
+"  \\s-1DEB_BUILD_GNU_SYSTEM\\s0 := linux-gnu\n"
+"endif\n"
+"DEB_BUILD_GNU_TYPE=$(\\s-1DEB_BUILD_GNU_CPU\\s0)-$(\\s-1DEB_BUILD_GNU_SYSTEM\\s0)\n"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:231
@@ -3925,6 +3984,10 @@ msgid ""
 "\\&\\s-1DEB_HOST_GNU_SYSTEM\\s0 := $(\\s-1DEB_BUILD_GNU_SYSTEM\\s0)\n"
 "\\&\\s-1DEB_HOST_GNU_TYPE\\s0 := $(\\s-1DEB_BUILD_GNU_TYPE\\s0)\n"
 msgstr ""
+"\\&\\s-1DEB_HOST_ARCH\\s0 := $(\\s-1DEB_BUILD_ARCH\\s0)\n"
+"\\&\\s-1DEB_HOST_GNU_CPU\\s0 := $(\\s-1DEB_BUILD_GNU_CPU\\s0)\n"
+"\\&\\s-1DEB_HOST_GNU_SYSTEM\\s0 := $(\\s-1DEB_BUILD_GNU_SYSTEM\\s0)\n"
+"\\&\\s-1DEB_HOST_GNU_TYPE\\s0 := $(\\s-1DEB_BUILD_GNU_TYPE\\s0)\n"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:235
@@ -3932,6 +3995,8 @@ msgid ""
 "Put a subset of these lines at the top of your debian/rules file; these "
 "default values will be overwritten if dpkg-architecture is used."
 msgstr ""
+"Lägg in en delmängd av dessa rader överst i din debian/rules-fil. "
+"Standardvariablerna kommer skrivas över om dpkg-architecture används."
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:242
@@ -3943,6 +4008,12 @@ msgid ""
 "remember that we are only trying to be backward compatible with native "
 "compilation)."
 msgstr ""
+"Du behöver inte alla. Välj en konsistent delmängd som innehåller de värden "
+"du använder i rules-filen. Om du till exempel bara behöver värd-"
+"Debianarkitekturen räcker det med \"DEB_HOST_ARCH=\\`dpkg --print-architecture\\`\" "
+"(ja, det är Debianarkitekturen på byggmaskinen, men kom ihåg att vi "
+"bara försöker vara bakåtkompatibel med kompilering på samma "
+"plattform)."
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:245
@@ -3950,6 +4021,8 @@ msgid ""
 "The B<-e> and B<-i> options were only introduced in relatively recent "
 "versions of B<dpkg-architecture> (since dpkg 1.13.13)."
 msgstr ""
+"Flaggorna B<-e> och B<-i> introducerades i B<dpkg-architecture> "
+"relativt nyligen (sedan dpkg 1.13.13)."
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:249
@@ -3957,32 +4030,35 @@ msgid ""
 "B<dpkg-buildpackage> accepts the B<-a> option and passes it to B<dpkg-"
 "architecture>. Other examples:"
 msgstr ""
+"B<dpkg-architecture> godtar flaggan B<-a> och sänder den vidare till "
+"B<dpkg-architecture>. Andra exempel:"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:251
 msgid "CC=i386-gnu-gcc dpkg-architecture CW<\\*(C`-c\\*(C'> debian/rules build"
-msgstr ""
+msgstr "CC=i386-gnu-gcc dpkg-architecture CW<\\*(C`-c\\*(C'> debian/rules build"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:253
 msgid "eval \\`dpkg-architecture CW<\\*(C`-u\\*(C'>\\`"
-msgstr ""
+msgstr "eval \\`dpkg-architecture CW<\\*(C`-u\\*(C'>\\`"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:256
 msgid ""
 "Check if an architecture is equal to the current architecture or a given one:"
 msgstr ""
+"Kontrollera om en arkitektur är samma som den nuvarande eller en given:"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:258
 msgid "dpkg-architecture -elinux-alpha"
-msgstr ""
+msgstr "dpkg-architecture -elinux-alpha"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:260
 msgid "dpkg-architecture -amips -elinux-mips"
-msgstr ""
+msgstr "dpkg-architecture -amips -elinux-mips"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:263
@@ -3990,16 +4066,18 @@ msgid ""
 "Check if the current architecture or an architecture provided with -a are "
 "Linux systems:"
 msgstr ""
+"Se om den aktuella arkitekturen eller en arkitektur som anges med -a är "
+"ett Linuxsystem:"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:265
 msgid "dpkg-architecture -ilinux-any"
-msgstr ""
+msgstr "dpkg-architecture -ilinux-any"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:267
 msgid "dpkg-architecture -ai386 -ilinux-any"
-msgstr ""
+msgstr "dpkg-architecture -ai386 -ilinux-any"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:271
@@ -4012,6 +4090,8 @@ msgid ""
 "B<dpkg-architecture> and this man page were initially written by Marcus "
 "Brinkmann E<lt>brinkmd@debian.orgE<gt>."
 msgstr ""
+"B<dpkg-architecture> och denna manualsida skrevs ursprungligen av "
+"Markus Brinkmann E<lt>brinkmd@debian.orgE<gt>."
 
 # type: TH
 #: ../../man/dpkg.cfg.5:1
