Finished translation of dpkg-checkbuilddeps and dpkg-distaddfile manual pages.

--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-07-21 16:13+0300\n"
-"PO-Revision-Date: 2007-07-30 11:42+0100\n"
+"PO-Revision-Date: 2007-07-31 06:04+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -4565,12 +4565,12 @@ msgstr ""
 #: ../../man/dpkg-checkbuilddeps.1:1
 #, no-wrap
 msgid "dpkg-checkbuilddeps"
-msgstr ""
+msgstr "dpkg-checkbuilddeps"
 
 # type: Plain text
 #: ../../man/dpkg-checkbuilddeps.1:4
 msgid "dpkg-checkbuilddeps - check build dependencies and conflicts"
-msgstr ""
+msgstr "dpkg-checkbuilddeps - kontrollera byggberoenden och -konflikter"
 
 # type: Plain text
 #: ../../man/dpkg-checkbuilddeps.1:9
@@ -4584,6 +4584,10 @@ msgid ""
 "dependencies and build conflicts listed in the control file. If any are not "
 "met, it displays them and exits with a nonzero return code."
 msgstr ""
+"Detta prorgram kontrollerar installerade paket på systemet mot "
+"byggberoenden och -konflikter som listas i filen control. Om de inte "
+"uppfylls, visas de och programmet avslutas med en felstatus som "
+"inte är noll."
 
 # type: Plain text
 #: ../../man/dpkg-checkbuilddeps.1:17
@@ -4591,6 +4595,8 @@ msgid ""
 "By default, I<debian/control> is read, but an alternate control filename may "
 "be specified on the command line."
 msgstr ""
+"Som standard läses I<debian/control>, men ett alternativt kontrollfilnamn kan "
+"anges på kommandoraden."
 
 # type: Plain text
 #: ../../man/dpkg-checkbuilddeps.1:27
@@ -4598,6 +4604,8 @@ msgid ""
 "Ignore I<Build-Depends-Indep> lines. Use when no arch-indep packages will be "
 "built."
 msgstr ""
+"Ignorera I<Build-Depends-Indep>-rader. Använd om inga arkitekturoberoende "
+"paket skall byggas."
 
 # type: TP
 #: ../../man/dpkg-checkbuilddeps.1:27
@@ -4625,12 +4633,12 @@ msgstr "E<lt>joeyh@debian.orgE<gt>"
 #: ../../man/dpkg-distaddfile.1:1
 #, no-wrap
 msgid "dpkg-distaddfile"
-msgstr ""
+msgstr "dpkg-distaddfile"
 
 # type: Plain text
 #: ../../man/dpkg-distaddfile.1:4
 msgid "dpkg-distaddfile - add entries to debian/files"
-msgstr ""
+msgstr "dpkg-distaddfile - lägg till poster i debian/files"
 
 # type: Plain text
 #: ../../man/dpkg-distaddfile.1:8
@@ -4640,7 +4648,7 @@ msgstr "B<dpkg-distaddfile> [I<flaggor>]I< filnamn sektion prioritet>"
 # type: Plain text
 #: ../../man/dpkg-distaddfile.1:13
 msgid "B<dpkg-distaddfile> adds an entry for a named file to B<debian/files>."
-msgstr ""
+msgstr "B<dpkg-distaddfile> lägger till en post för en namngiven fil i B<debian/files>."
 
 # type: Plain text
 #: ../../man/dpkg-distaddfile.1:18
@@ -4648,6 +4656,8 @@ msgid ""
 "It takes three non-option arguments, the filename and the section and "
 "priority for the B<.changes> file."
 msgstr ""
+"Det tar tre argument som inte är flaggor - filnamn, sektion och "
+"prioritet för B<.changes>-filen."
 
 # type: Plain text
 #: ../../man/dpkg-distaddfile.1:26
@@ -4656,6 +4666,9 @@ msgid ""
 "genchanges> will expect to find the files, usually B<..>, rather than being "
 "a pathname relative to the current directory when B<dpkg-distaddfile> is run."
 msgstr ""
+"Filnamnet anges relativt till katalogen där B<dpkg-genchanges> förväntas "
+"finna filerna, normalt B<..>, snarare än som en sökväg relativ till den "
+"aktuella katalogen när B<dpkg-distaddfile> körs."
 
 # type: TP
 #: ../../man/dpkg-distaddfile.1:28 ../../man/dpkg-genchanges.1:99
@@ -4670,6 +4683,8 @@ msgid ""
 "Read or write the list of files to be uploaded here, rather than using "
 "B<debian/files>."
 msgstr ""
+"Läs eller skriv listan över filer som skall sändas in här, istället för att "
+"använda B<debian/file>."
 
 # type: TP
 #: ../../man/dpkg-distaddfile.1:40 ../../man/dpkg-genchanges.1:135
@@ -4684,6 +4699,8 @@ msgid ""
 "The list of generated files which are part of the upload being prepared.  "
 "B<dpkg-distaddfile> can be used to add additional files."
 msgstr ""
+"Listan över genererade filer so ingår i insändningen som förbereds. "
+"B<dpkg-distaddfile> kan användas för att lägga till ytterligare filer."
 
 # type: TH
 #: ../../man/dpkg-deb.1:1
@@ -4998,7 +5015,7 @@ msgstr "B<--license>, B<--licence>"
 #: ../../man/dpkg-deb.1:171 ../../man/dpkg-name.1:65 ../../man/dpkg-query.1:68
 #: ../../man/dpkg-split.1:136
 msgid "Show the copyright licensing terms and exit."
-msgstr ""
+msgstr "Visa upphovsrättslicensvillkor och avsluta."
 
 # type: TP
 #: ../../man/dpkg-deb.1:173
@@ -5039,7 +5056,7 @@ msgstr "Förvalet för fältet är \"${Package}\\et${Version}\\en\"."
 #: ../../man/dpkg-deb.1:189
 #, no-wrap
 msgid "B<-z>I<compress_level>"
-msgstr ""
+msgstr "B<-z>I<komprimeringsnivå>"
 
 # type: Plain text
 #: ../../man/dpkg-deb.1:193
@@ -5047,6 +5064,9 @@ msgid ""
 "Specify which compression level to pass to the compressor backend program, "
 "when building a package."
 msgstr ""
+""
+"Ange vilken komprimeringsnivå som skall sändas till komprimeringsprogrammet "
+"när ett paket byggs."
 
 # type: TP
 #: ../../man/dpkg-deb.1:193
@@ -5060,6 +5080,9 @@ msgid ""
 "Specify which compression type to use when building a package. Allowed "
 "values are I<gzip>, I<bzip2>, I<lzma>, and I<none> (default is I<gzip>)."
 msgstr ""
+"Ange vilken komprimeringstyp som skall användas när ett paket byggs. "
+"Tillåtna värden är I<gzip>, I<bzip2>, I<lzma> och I<none> (förval "
+"är I<gzip>)."
 
 # type: TP
 #: ../../man/dpkg-deb.1:198
