--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,6 +1,6 @@
-2007-07-29  Peter Karlsson  <peterk@debian.org>
+2007-07-31  Peter Karlsson  <peterk@debian.org>
 
-	* po/sv.po, po/sv.add: Began updating Swedish translation.
+	* po/sv.po, po/sv.add: Updated to 991t291u.
 
 2007-07-21  Guillem Jover  <guillem@debian.org>
 
