Translated the dpkg-genchanges manual page.

--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-07-21 16:13+0300\n"
-"PO-Revision-Date: 2007-07-31 19:51+0100\n"
+"PO-Revision-Date: 2007-07-31 20:03+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -5490,7 +5490,7 @@ msgstr "dpkg-genchanges"
 # type: Plain text
 #: ../../man/dpkg-genchanges.1:4
 msgid "dpkg-genchanges - generate Debian .changes files"
-msgstr ""
+msgstr "dpkg-genchanges - skapa .changes-filer för Debian"
 
 # type: Plain text
 #: ../../man/dpkg-genchanges.1:8
@@ -5504,6 +5504,9 @@ msgid ""
 "source tree and from the files it has generated and generates a Debian "
 "upload control file (B<.changes> file)."
 msgstr ""
+"B<dpkg-genchanges> läser information från ett uppackat och byggt "
+"Debiankällkodsträd och från de filer det har genererat, och genererar "
+"en styrfil för insändning till Debian (B<.changes>-fil)."
 
 # type: TP
 #: ../../man/dpkg-genchanges.1:18
@@ -5519,6 +5522,9 @@ msgid ""
 "B<.changes> file will include whatever files were created by the B<binary-*> "
 "target(s) of the package being built."
 msgstr ""
+"Detta är ett rent binärbygge (inga källkodsfiler skall inkluderas). Det är "
+"ingen skillnad mellan B<-b> och B<-B>, den B<.changes>-fil som skapas "
+"innehåller alla filer som skapats av B<binary-*>-målen i det byggda paketet."
 
 # type: Plain text
 #: ../../man/dpkg-genchanges.1:31
@@ -5534,13 +5540,15 @@ msgid ""
 "Causes changelog information from all versions strictly later than "
 "I<version> to be used."
 msgstr ""
+"Använder information från ändringsloggen för alla versioner som är strikt "
+"senare än I<version>."
 
 # type: TP
 #: ../../man/dpkg-genchanges.1:73 ../../man/dpkg-gencontrol.1:20
 #: ../../man/dpkg-source.1:85
 #, no-wrap
 msgid "B<-V>I<name>B<=>I<value>"
-msgstr ""
+msgstr "B<-V>I<namn>B<=>I<värde>"
 
 # type: Plain text
 #: ../../man/dpkg-genchanges.1:77 ../../man/dpkg-source.1:89
@@ -5548,6 +5556,8 @@ msgid ""
 "Set an output substitution variable.  See B<deb-substvars>(5) for a "
 "discussion of output substitution."
 msgstr ""
+"Ställer in en utdatasubstitueringsvariabel. Se B<deb-substvars>(5) för "
+"en beskrivning av utdatasubstituering."
 
 # type: TP
 #: ../../man/dpkg-genchanges.1:77 ../../man/dpkg-gencontrol.1:24
@@ -5563,6 +5573,8 @@ msgid ""
 "Read substitution variables in I<substvarsfile>; the default is B<debian/"
 "substvars>."
 msgstr ""
+"Läser substitueringsvariabler i I<substvarfil>; standardvärdet är "
+"B<debian/substvars>."
 
 # type: TP
 #: ../../man/dpkg-genchanges.1:83 ../../man/dpkg-gencontrol.1:30
@@ -5575,7 +5587,7 @@ msgstr "B<-D>I<fält>B<=>I<värde>"
 #: ../../man/dpkg-genchanges.1:86 ../../man/dpkg-gencontrol.1:33
 #: ../../man/dpkg-source.1:98
 msgid "Override or add an output control file field."
-msgstr ""
+msgstr "Ersätt eller lägg till ett fält i den genererade control-filen."
 
 # type: TP
 #: ../../man/dpkg-genchanges.1:86 ../../man/dpkg-gencontrol.1:33
@@ -5588,7 +5600,7 @@ msgstr "B<-U>I<fält>"
 #: ../../man/dpkg-genchanges.1:89 ../../man/dpkg-gencontrol.1:36
 #: ../../man/dpkg-source.1:101
 msgid "Remove an output control file field."
-msgstr ""
+msgstr "Ta bort ett fält ur den genererade control-filen."
 
 # type: TP
 #: ../../man/dpkg-genchanges.1:89 ../../man/dpkg-gencontrol.1:36
@@ -5603,13 +5615,15 @@ msgid ""
 "Specifies the main source control file to read information from. The default "
 "is B<debian/control>."
 msgstr ""
+"Anger huvudkällkodskontrollfilen som information skall läsas från. "
+"Standardvärdet är B<debian/control>."
 
 # type: TP
 #: ../../man/dpkg-genchanges.1:94 ../../man/dpkg-gencontrol.1:41
 #: ../../man/dpkg-parsechangelog.1:16 ../../man/dpkg-source.1:73
 #, no-wrap
 msgid "B<-l>I<changelogfile>"
-msgstr ""
+msgstr "B<-l>I<ändringsloggfil>"
 
 # type: Plain text
 #: ../../man/dpkg-genchanges.1:99 ../../man/dpkg-gencontrol.1:46
@@ -5618,6 +5632,8 @@ msgid ""
 "Specifies the change log file to read information from. The default is "
 "B<debian/changelog>."
 msgstr ""
+"Anger ändringsloggfilen som information skall läsas från. Standardvärdet är "
+"B<debian/changelog>."
 
 # type: Plain text
 #: ../../man/dpkg-genchanges.1:103
@@ -5625,13 +5641,15 @@ msgid ""
 "Read the list of files to be uploaded here, rather than using B<debian/"
 "files>."
 msgstr ""
+"Läser listan över filer som skall sändas in härifrån, istället för att använda "
+"B<debian/files>."
 
 # type: TP
 #: ../../man/dpkg-genchanges.1:103 ../../man/dpkg-gencontrol.1:50
 #: ../../man/dpkg-parsechangelog.1:21 ../../man/dpkg-source.1:80
 #, no-wrap
 msgid "B<-F>I<changelogformat>"
-msgstr ""
+msgstr "B<-F>I<ändringsloggformat>"
 
 # type: Plain text
 #: ../../man/dpkg-genchanges.1:108 ../../man/dpkg-gencontrol.1:55
@@ -5641,12 +5659,15 @@ msgid ""
 "special line near the bottom of the changelog or failing that defaults to "
 "the debian standard format."
 msgstr ""
+"Anger format på ändringsloggen. Som standard läses formatet från en "
+"speciell rad nära slutet av ändringsloggen, eller så används Debians "
+"standardformat om ingen information hittas."
 
 # type: TP
 #: ../../man/dpkg-genchanges.1:108
 #, no-wrap
 msgid "B<-u>I<uploadfilesdir>"
-msgstr ""
+msgstr "B<-u>I<insändningskatalog>"
 
 # type: Plain text
 #: ../../man/dpkg-genchanges.1:119
@@ -5655,6 +5676,9 @@ msgid ""
 "(B<dpkg-genchanges> needs to find these files so that it can include their "
 "sizes and checksums in the B<.changes> file)."
 msgstr ""
+"Se efter filer som skall sändas in i I<insändningskatalog> istället för B<..> "
+"(B<dpkg-genchanges> måste kunna se dessa filer så att det kan lägga "
+"in deras storlekar och kontrollsummor i B<.changes>-filen)."
 
 # type: TP
 #: ../../man/dpkg-genchanges.1:119
@@ -5669,6 +5693,9 @@ msgid ""
 "error, for example about how many of the package's source files are being "
 "uploaded.  B<-q> suppresses these messages."
 msgstr ""
+"B<dpkg-genchanges> kommer normalt att generera informativa meddelanden "
+"på standard fel, till exempel om hur många pakets källkodsfiler sänds in. B<-q> "
+"undertrycker dessa meddelanden."
 
 # type: Plain text
 #: ../../man/dpkg-genchanges.1:143
@@ -5676,6 +5703,8 @@ msgid ""
 "The list of generated files which are part of the upload being prepared.  "
 "B<dpkg-genchanges> reads the data here when producing a B<.changes> file."
 msgstr ""
+"Listan över genererade filer som är en del av den insändning som förbereds. "
+"B<dpkg-genchanges> läser data här när B<.changes>-filen skapas."
 
 # type: Plain text
 #: ../../man/dpkg-gencontrol.1:1
